tests/ui/span/non-existing-module-import.rs
use std::bar::{foo1, foo2}; //~ ERROR unresolved import

fn main() {}
